src/snapshot_middleware/snapshots/librojo__snapshot_middleware__lua__test__client_from_vfs.snap
---
source: src/snapshot_middleware/lua.rs
expression: instance_snapshot
---
snapshot_id: "00000000000000000000000000000000"
metadata:
  ignore_unknown_instances: false
  instigating_source:
    Path: /foo.client.lua
  relevant_paths:
    - /foo.client.lua
    - /foo.meta.json
  context: {}
name: foo
class_name: LocalScript
properties:
  Source:
    String: Hello there!
children: []

