src/snapshot_middleware/snapshots/librojo__snapshot_middleware__lua__test__init_module_from_vfs_with_meta.snap
---
source: src/snapshot_middleware/lua.rs
expression: instance_snapshot
---
snapshot_id: "00000000000000000000000000000000"
metadata:
  ignore_unknown_instances: false
  instigating_source:
    Path: /root
  relevant_paths:
    - /root
    - /root/init.lua
    - /root/init.luau
    - /root/init.server.lua
    - /root/init.server.luau
    - /root/init.client.lua
    - /root/init.client.luau
    - /root/init.plugin.lua
    - /root/init.plugin.luau
    - /root/init.csv
    - /root/init.meta.json
    - /root/init.meta.jsonc
  context:
    emit_legacy_scripts: true
  specified_id: manually specified
  middleware: ~
  schema: ~
name: root
class_name: ModuleScript
properties:
  Source:
    String: Hello!
children: []
